# CLUE

./: README.md  pyproject.toml
src/CLUE/: core.py
src/clue_oodeval/: __init__.py  core.py  utils.py
tests/: test_core.py
tests/test_files/: candidate_codellama.json  candidate_human.json  reference.json
